<resources>
    <string name="app_name">NoteApp</string>
    <!-- menu horni -->
    <string name="action_note">Poznámky</string>
    <string name="action_settings">Nastavení</string>
    <string name="action_api">Ukázka API</string>
    <!--about -->
    <string name="about_TextView_header">O aplikaci NoteApp</string>
    <string name="about_TextView_text">Tato aplikace vznikla pro potřeby předmětu AK7MT.</string>

    <!-- settings -->
    <!-- api -->

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">@string/app_name</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Další</string>
    <string name="previous">Předchozí</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="add_actionitem">Přidat novinku</string>
    <string name="smaz_ni">Smazáni</string>
    <string name="tvname">tvName</string>
    <string name="title_activity_action_api">ActionApi</string>
    <string name="tvTitle">Přidej poznámku</string>
    <string name="title_activity_api">ApiActivity</string>
    <string name="title_home">O aplikaci</string>
    <string name="title_dashboard">API Mars</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_api">API</string>
    <string name="title_about">O aplikaci</string>
    <string name="show_all">Ukaž vše</string>
    <string name="show_buy">Ukaž buy</string>
    <string name="show_rent">Ukaž rent</string>
    <string name="viewModel.response">Overview response</string>
    <string name="text_About">O aplikaci</string>
    <string name="text_About_full">Tato aplikace vzikala narychlo za účelem splnění zadání pro předmět mobilní technologie. Dnes už vím, že jsem si měl raději vybrat možnost seminární práce :-)</string>
</resources>