<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.noteapp.ui.MainActivity">
    <item
        android:id="@+id/action_note"
        android:icon="@drawable/note_box_menu"
        android:orderInCategory="100"
        android:title="@string/action_note"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_api"
        android:icon="@drawable/api_box_menu"
        android:orderInCategory="100"
        android:title="@string/action_api"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/sett_box_menu"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>